fixed aside bar on mobile devices

--- a/src/components/layouts/Navigation/Navigation.module.scss
+++ b/src/components/layouts/Navigation/Navigation.module.scss
@@ -140,6 +140,11 @@ section.navInline ul {
       }
     }
   }
+  .universalHeader {
+    aside {
+      display: none;
+    }
+  }
 }
 
 @media only screen and (max-width: 641px) {
